AbsPath in ProjectFilesystemFactory
Summary: `ProjectFilesystemFactory.create` methods only accept absolute paths. Express that using `AbsPath` type.

Reviewed By: bobyangyf

shipit-source-id: b0262d1b054a79b3f416ca8134d19cecec59109c